--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "lodash": "^4.17.21",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
